@@ -8,6 +8,8 @@
  - Added character info text when mouse over portrait;
  - gui: defined mouse hint for all gui objects;
  - Added support to MacOSX;
+ - Added shader for texture splatting (splatting now can be via
+   ARB extensions or GLSL shader);
 
 BugFixes:
  - Fixed a bug that freezes the game when drinking a beer (thanks 
